--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
                         Our lipsmacking creations will tickle your culinary senses!
                     </p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <button type="button" class="btn btn-warning">Reserve Table</button>
                 </div>
             </div>
         </div>
@@ -67,16 +70,20 @@
             </div>
         </div>
 
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. 
-                    Free flowing bubbly and soft drinks. All for just $19.99 per person 
-                </p>
+            <div class="col col-sm order-sm-last col-md">
+                <div class="media">                   
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p class="d-done d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. 
+                            Free flowing bubbly and soft drinks. All for just $19.99 per person
+                        </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-end" src="img/buffet.png" alt="Buffet">
+                </div>
             </div>
         </div>
 
@@ -97,7 +104,56 @@
                     </div>
                 </div>
             </div>
-
+        </div>
+        <div class="row row-content align-self-center">
+            <div class="col col-sm-8">
+                <div class="card">
+                    <h4 class="card-header bg-warning text-white">Reserve a Table</h4>
+                    <div class="card-body">
+                        <div class="row">
+                            <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                <label class="form-check-label" for="inlineRadio3">3</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                <label class="form-check-label" for="inlineRadio4">4</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                <label class="form-check-label" for="inlineRadio5">5</label>
+                              </div>
+                              <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                <label class="form-check-label" for="inlineRadio6">6</label>
+                              </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="reservetime" class="col-md-2 col-form-label">Date and Time</label>
+                            <div col="col-5 col-md-3">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div col="col-7 col-md-7">
+                                <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
     </div>
 
