--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             Free flowing bubbly and soft drinks. All for just $19.99 per person
                         </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-end" src="img/buffet.png" alt="Buffet">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Buffet">
                 </div>
             </div>
         </div>
