--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span>Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <!-- <a data-toggle="modal" data-target="#loginModal">
                         <span class="fa fa-sign-in"></span> Login
-                    </a>
+                    </a> -->
+                    <a><span class="fa fa-sign-in" id="loginid"></span> Login</a>
                 </span>
             </div>
         </div>
@@ -154,8 +155,11 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#reserveModal">
+                        <!-- <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#reserveModal">
                             Resverse Table
+                        </button> -->
+                        <button type="button" class="btn btn-warning" id="reseversetable">
+                            Reseverse Table
                         </button>
                 </div>
             </div>
@@ -294,6 +298,18 @@
                 $("#carouselButton").children("span").removeClass('fa-play');
                 $("#carouselButton").children("span").addClass('fa-pause');
             }
+        });
+
+        $("#reseversetable").click(function(){
+            $("#reserveModal").modal({
+                show:true
+            });
+        });
+
+        $("#loginid").click(function(){
+            $("#loginModal").modal({
+                show:true
+            });
         });
     </script>
 </body>
